--- a/frontend/src/app/components/general-components/menu-bar/menu-bar.component.css
+++ b/frontend/src/app/components/general-components/menu-bar/menu-bar.component.css
@@ -11,6 +11,8 @@
     width: 100%;
     justify-content: flex-end;
     padding: 10px;
+    margin-top: 20px;
+    margin-right: -10px;
   }
   
   .radio-wrapper {
